--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt": "~0.4.2",
     "yaml-front-matter": "~2.1.11",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "wrench": "~1.5.6"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
