--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "grunt": "~0.4.2",
     "yaml-front-matter": "~2.1.11",
     "lodash": "~2.4.1",
-    "wrench": "~1.5.6"
+    "wrench": "~1.5.6",
+    "chalk": "~0.4.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
