--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "chalk": "~0.4.0"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.0",
+    "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt": "~0.4.2"
+    "marked": "^0.3.2"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
