--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "yaml-front-matter": "~2.1.11",
     "lodash": "~2.4.1",
     "wrench": "~1.5.6",
-    "chalk": "~0.4.0"
+    "chalk": "~0.4.0",
+    "marked": "~0.3.2"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
